@@ -1,6 +1,7 @@
 package www.raven.jc.override;
 
 import cn.hutool.core.lang.Assert;
+import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.redisson.api.RedissonClient;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,7 +20,6 @@ import www.raven.jc.constant.JwtConstant;
 import www.raven.jc.dto.TokenDTO;
 import www.raven.jc.util.JwtUtil;
 
-import jakarta.annotation.Resource;
 import java.util.List;
 import java.util.Objects;
 
@@ -54,9 +54,9 @@ public class DefaultSecurityContextRepository implements ServerSecurityContextRe
         if (tokens == null || tokens.isEmpty()) {
             return Mono.empty();
         }
-        TokenDTO dto = JwtUtil.parseToken(tokens.get(0), jwtProperty.key);
+        TokenDTO dto = JwtUtil.parseToken(tokens.getFirst(), jwtProperty.key);
         log.info("访问者信息 {} {} {}", dto.getUserId(), dto.getRole(), dto.getExpireTime());
-        Assert.isTrue(Objects.equals(tokens.get(0), redissonClient.getBucket(JwtConstant.TOKEN + dto.getUserId()).get()), "未登录");
+        Assert.isTrue(Objects.equals(tokens.getFirst(), redissonClient.getBucket(JwtConstant.TOKEN + dto.getUserId()).get()), "未登录");
         request.mutate().header(JwtConstant.TIME, String.valueOf(dto.getExpireTime())).header(JwtConstant.USER_ID, dto.getUserId().toString()).build();
         Authentication auth = new UsernamePasswordAuthenticationToken(dto.getUserId(), null, AuthorityUtils.createAuthorityList(dto.getRole().toArray(new String[0])));
         return tokenAuthenticationManager.authenticate(
